bijwerken site op basis van in description genoemde punten
1. Contact formulier enkel @ home, copyright+stuur mail laten staan.
2. Logo’s fixen
3. Heruitlijnen RTC tekst, belangrijke tekst benadrukken “quoten”
4. Media sectie bij maatwerk & breedtesport
5. Logo facebook onderaan toevoegen

--- a/Website/Basis Website [SBR Viewer]/index.html
+++ b/Website/Basis Website [SBR Viewer]/index.html
@@ -318,90 +318,94 @@
                         </h2>
                         <div class="divider-grey"></div>
                     </div>
-                    <div class="section-container">
-                        <div class="row col-md-offset-2">
-                            <div class="text-left col-md-3 col-xs-6">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/atr.jpg" width="200px" height="100px" alt="ATR">
-                                </a>
-                            </div>
-                            <div class="text-left col-md-3 col-xs-6">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/accessio.gif" width="200px" height="100px" alt="accessio">
-                                </a>
-                            </div>
-                            <div class="text-left col-md-3">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/accept.png" width="200px" height="100px" alt="accept">
-                                </a>
-                            </div>
+                    <div class="section-container partners">
+                        <div class="text-left col-lg-3 col-lg-offset-2 col-sm-5 col-sm-offset-2 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/atr.jpg" width="200px" height="100px" alt="ATR">
+                            </a>
                         </div>
 
-                        <div class="row col-md-offset-2">
-                            <div class="text-left col-md-3 col-xs-6">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/suitzendburo.jpg" width="200px" height="100px" alt="suitzendburo">
-                                </a>
-                            </div>
-                            <div class="text-left col-md-3 col-xs-6">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/dps.jpg" width="200px" height="100px"  alt="dps">
-                                </a>
-                            </div>
-                            <div class="text-left col-md-3">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/wwrecruitment.jpg" width="200px" height="100px" alt="wwrecruitment">
-                                </a>
-                            </div>
+                        <div class="text-left col-lg-3 col-lg-offset-0 col-sm-5 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/accessio.gif" width="200px" height="100px" alt="accessio">
+                            </a>
                         </div>
 
-                        <div class="row col-md-offset-2">
-                            <div class="text-left col-md-3 col-xs-6">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/vbmc.png" width="200px" height="100px" alt="vbmc">
-                                </a>
-                            </div>
-                            <div class="text-left col-md-3 col-xs-6">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/lodge.jpg" width="200px" height="100px" alt="lodge">
-                                </a>
-                            </div>
+                        <div class="text-left col-lg-3 col-lg-offset-0 col-sm-5 col-sm-offset-2 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/topsport.jpg" width="200px" height="100px" alt="topsport">
+                            </a>
                         </div>
 
-                        <div class="row col-md-offset-2">
-                            <div class="text-left col-md-3 col-xs-6">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/trijks.jpg" width="200px" height="100px" alt="trijks">
-                                </a>
-                            </div>
-                            <div class="text-left col-md-3 col-xs-6">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/topsport.jpg" width="200px" height="100px" alt="topsport">
-                                </a>
-                            </div>
-                            <div class="text-left col-md-3">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/elst.jpg" width="200px" height="100px" alt="elst">
-                                </a>
-                            </div>
+                        <div class="text-left col-lg-3 col-lg-offset-2 col-sm-5 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/suitzendburo.jpg" width="200px" height="100px" alt="suitzendburo">
+                            </a>
                         </div>
 
-                        <div class="row col-md-offset-2">
-                            <div class="text-left col-md-3 col-xs-6">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/wokkie.png" width="200px" height="100px" alt="wokkie">
-                                </a>
-                            </div>
-                            <div class="text-left col-md-3 col-xs-6">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/talentencentrum.jpg" width="200px" height="100px" alt="talentencentrum">
-                                </a>
-                            </div>
-                            <div class="text-left col-md-3">
-                                <a href="#" target="_blank">
-                                    <img src="img/logo/bogers.png" width="200px" height="100px" alt="bogers">
-                                </a>
-                            </div>
+                        <div class="text-left col-lg-3 col-lg-offset-0 col-sm-5 col-sm-offset-2 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/dps.jpg" width="200px" height="100px"  alt="dps">
+                            </a>
+                        </div>
+
+                        <div class="text-left col-lg-3 col-lg-offset-0 col-sm-5 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/wwrecruitment.jpg" width="200px" height="100px" alt="wwrecruitment">
+                            </a>
+                        </div>
+
+                        <div class="text-left col-lg-3 col-lg-offset-2 col-sm-5 col-sm-offset-2 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/vbmc.png" width="200px" height="100px" alt="vbmc">
+                            </a>
+                        </div>
+
+                        <div class="text-left col-lg-3 col-lg-offset-0 col-sm-5 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/wokkie.png" width="200px" height="100px" alt="wokkie">
+                            </a>
+                        </div>
+
+                        <div class="text-left col-lg-3 col-lg-offset-0 col-sm-5
+                         col-sm-offset-2 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/trijks.jpg" width="200px" height="100px" alt="trijks">
+                            </a>
+                        </div>
+
+                        <div class="text-left col-lg-3 col-lg-offset-2 col-sm-5
+                         col-sm-offset-0 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/lodge.jpg" width="200px" height="100px" alt="lodge">
+                            </a>
+                        </div>
+
+                        <div class="text-left col-lg-3 col-lg-offset-0 col-sm-5
+                         col-sm-offset-2 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/elst.jpg" width="200px" height="100px" alt="elst">
+                            </a>
+                        </div>
+
+                        <div class="text-left col-lg-3 col-lg-offset-0 col-sm-5
+                         col-sm-offset-0 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/accept.png" width="200px" height="100px" alt="accept">
+                            </a>
+                        </div>
+
+                        <div class="text-left col-lg-3 col-lg-offset-2 col-sm-5
+                         col-sm-offset-2 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/talentencentrum.jpg" width="200px" height="100px" alt="talentencentrum">
+                            </a>
+                        </div>
+
+                        <div class="text-left col-lg-3 col-lg-offset-0 col-sm-5 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+                            <a href="#" target="_blank">
+                                <img src="img/logo/bogers.png" width="200px" height="100px" alt="bogers">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -539,17 +543,12 @@
         </section>
     </main>
 
-
-
-
-
-
-<section id="footer">
-    <div class="footer-section">
-        <p>&copy; 2015 Stichting Rugby Zebra Alle rechten voorbehouden<br/> Vragen? Stuur ons <a href="mailto:info@rugbyzebra.nl">e-mailbericht</a>.
-        </p>
-    </div>
-</section>
+    <section id="footer">
+        <div class="footer-section">
+            <p>&copy; 2015 Stichting Rugby Zebra Alle rechten voorbehouden<br/> Vragen? Stuur ons <a href="mailto:info@rugbyzebra.nl">e-mailbericht</a> of like ons op <a href="https://nl-nl.facebook.com/pages/Rugby-ZeBra/1419160591671039"><img src="img/logo/facebook.png" height="15px" width="15px" alt="">Facebook</a>.
+            </p>
+        </div>
+    </section>
         
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
