--- a/Website/Basis Website [SBR Viewer]/rtc.html
+++ b/Website/Basis Website [SBR Viewer]/rtc.html
@@ -73,11 +73,8 @@
                             </li>
                             <li class="page-scroll">
                                 <a href="#RTCdagen">
-                                    RTC 2015
+                                    RTC_2015
                                 </a>
-                            </li>
-                            <li class="page-scroll">
-                                <a href="#contact">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -119,16 +116,26 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="col-md-6 kolom">
                             <p>
-                                De NRB organiseert elk seizoen een aantal RTC-trainingen voor 'getalenteerde' jeugdrugbyspelers in de leeftijdsgroep U12 - U15.  Dit naast het herkennen en verder volgen van deze 'talenten'. De RTC- opleiding mondt voor een aantal deelnemers uiteindelijk uit in het doorstromen naar de Rugby Academie's en/of nationale jeugdselecties. <b>Leerlingen van de RA zijn verplicht deel te nemen aan de RTC trainingen.</b> Het technisch programma voor het RTC wordt door de NRB ontwikkeld en aangeleverd aan de   verschillende RTC’s. Uitgangspunt van het RTC-programma is het Meerjaren Opleidingsplan Rugby (MOR).
+                                De NRB organiseert elk seizoen een aantal RTC-trainingen voor 'getalenteerde' jeugdrugbyspelers in de leeftijdsgroep U12 - U15.  Dit naast het herkennen en verder volgen van deze 'talenten'. De RTC- opleiding mondt voor een aantal deelnemers uiteindelijk uit in het doorstromen naar de Rugby Academie's en/of nationale jeugdselecties. <i>Leerlingen van de RA zijn verplicht deel te nemen aan de RTC trainingen.</i> Het technisch programma voor het RTC wordt door de NRB ontwikkeld en aangeleverd aan de   verschillende RTC’s. Uitgangspunt van het RTC-programma is het Meerjaren Opleidingsplan Rugby (MOR).
                             </p>
                         </div>
                         <div class="col-md-6 kolom">
                             <p>
                                  ZeBra trainers dragen zorg voor de uitvoering van dit technische programma zoals aangegeven door de NRB.  Tijdens de trainingen wordt rekening gehouden met niveauverschillen. Indien mogelijk worden de spelers ingedeeld in twee groepen, zodat iedereen op zijn/haar niveau kan trainen.
                             </p>
-                            <p>
-                                ZeBra biedt ook rugbyers in de leeftijdsgroep U 10, U11, U16 en U17 een programma tijdens de RTC dagen. 
-                            </p>  
+                            <table class="table">
+                                <tr>
+                                    <td>
+                                        <blockquote class="blockquote-reverse">
+                                            <strong>
+                                                &#8220;
+                                                ZeBra biedt ook rugbyers in de leeftijdsgroep U 10, U11, U16 en U17 een programma tijdens de RTC dagen. 
+                                                &#8221;
+                                            </strong>
+                                        </blockquote> 
+                                    </td>
+                                </tr>
+                            </table>
 
                         </div>
                     </div>
@@ -149,44 +156,6 @@
                                 Voor de deelnemers is een platform gerealiseerd om stappen te maken. De trainingen die worden verzorgd sluiten naadloos aan op het bereiken van hogere niveau's. Opleidingsprogramma's houden rekening met de verschillen in leeftijd en ontwikkelfases van rugbyers. Belangrijke motieven daarbij zijn zelfontplooing, plezier beleven en het gevoel hebben zinvol bezig te zijn met en voor anderen en zichzelf. Opleiding-/ en ondersteuningsprogramma's worden door tussenkomst van ZeBra (Technisch Hart) afgestemd met de NRB, betrokken verenigingen en organisaties.
                                 <p>
                                 <h3>Seizoen 2015 – 2016</h3>
-<!--                                 <table class="table">
-                                    <tr>
-                                        <td class="info-green" colspan="2"><strong>zondag #</strong></td>
-                                    </tr>
-                                        <tr>
-                                            <td>09.00 - 13.00</td>
-                                            <td>
-                                                RTC 1 te sportpark Vierhoeven
-                                            </td>
-                                        </tr>
-                                    <tr>
-                                        <td class="info-green" colspan="2"><strong>zondag #</strong></td>
-                                    </tr>
-                                        <tr>
-                                            <td>09.00 - 13.00</td>
-                                            <td>
-                                                RTC 2 te sportpark Vierhoeven
-                                            </td>
-                                        </tr>
-                                    <tr>
-                                        <td class="info-green" colspan="2"><strong>zondag #</strong></td>
-                                    </tr>
-                                        <tr>
-                                            <td>09.00 - 13.00</td>
-                                            <td>
-                                                RTC 3 te sportpark Vierhoeven
-                                            </td>
-                                        </tr>
-                                    <tr>
-                                        <td class="info-green" colspan="2"><strong>zaterdag #</strong></td>
-                                    </tr>
-                                        <tr>
-                                            <td>10.00 - 15.00</td>
-                                            <td>
-                                                RTC 4 te NRCA
-                                            </td>
-                                        </tr>
-                                </table> --> 
 
                                 <table class="table">
                                     <tr>
@@ -232,150 +201,14 @@
                 </div>
             </div>
         </section>
-        
-<section id="contact" class="section contact">
-            <div class="section-body">
-                <div class="content">
-                    <div class="section-container ">
-                        <div class="vert-center">
-                            <div class="row">
-                                <div class="col-lg-4 col-lg-offset-1 col-sm-4 col-md-6 col-xs-10 contact-left">
-                                    <h3>
-                                        Stuur een bericht
-                                    </h3>
-                                    <br>
-                                    <p>
-                                        Hebt u opmerkingen of suggesties voor ons? Dan horen wij dat graag.
-                                    </p>
-                                    <br>
-                                    <p>
-                                        <a href="mailto:info@rugbyzebra.nl" class="social">
-                                            info@rugbyzebra.nl
-                                        </a><br />
-                                        <br />
-                                        <a href="https://nl-nl.facebook.com/pages/Rugby-ZeBra/1419160591671039" class="social" target="blank">
-                                            <i class="fa fa-facebook"></i>
-                                            <!--[if lt IE 8]>F: facebook<br /><![endif]-->
-                                        </a>
-                                        <a href="mailto:info@rugbyzebra.nl" class="social">
-                                            <i class="fa fa-inbox"></i>
-                                            <!--[if lt IE 8]>E: info@rugbyzebra.nl<![endif]-->
-                                        </a>
-                                    </p>
-                                </div>
-                                <div class="col-lg-5 col-sm-8 col-md-6 col-xs-10 contact-right">
-                                    <h3>
-                                        Werk met ons samen
-                                    </h3>
-                                    <br>
-                                    <p>
-                                        Ook wanneer u mogelijkheden ziet tot samenwerking, horen wij graag van u.
-                                    </p>
-                                    <br>
-                                    <p class="page-scroll">
-                                        <a href="#contact-form" class="button">Formulier</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="contact-form" class="section contact-form">
-            <div class="section-body">
-                <div class="content">
-                    <div class="section-header">
-                        <h2>
-                            Stuur een bericht
-                        </h2>
-                        <div class="divider-grey"></div>
-                    </div>
-                    <div class="section-container">
-                        <div class="row">
-                            <div class="col-lg-10 col-lg-offset-1">
-                                <form ng-submit="submitForm()" ng-controller="FormController" novalidate>
-
-                                    <div class="form-group">
-                                        <label for="name">
-                                            <!--[if lt IE 10]>
-                                                <span lang="nl">Naam</span>
-                                                <span lang="en">Naam</span>
-                                            <![endif]-->
-                                        </label>
-                                        <input type="text" class="form-control" name="name" ng-model="formData.name" ng-class="{'error' : errorName}" data-placeholder_class=".placeholder" title="Naam en of bedrijfsnaam">
-                                        <div class="required">*</div>
-                                        <div class="placeholder hidden">
-                                            Naam
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="email">
-                                            <!--[if lt IE 10]>
-            <span lang="nl">E-mail</span>
-            <span lang="en">E-mail</span>
-                <![endif]-->
-                                        </label>
-                                        <input type="email" class="form-control" name="email" ng-model="formData.email" ng-class="{'error' : errorEmail}" data-placeholder_class=".placeholder" title="E-mail">
-                                        <div class="required">*</div>
-                                        <div class="placeholder hidden">
-                                            E-mail
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="phone">
-                                            <!--[if lt IE 10]>
-                    <span lang="nl">Telefoonnummer</span>
-                    <span lang="en">Phonenumber</span>
-                        <![endif]-->
-                                        </label>
-                                        <input type="text" class="form-control" name="phone" ng-model="formData.phone" data-placeholder_class=".placeholder" title="Telefoonnummer">
-                                        <div class="placeholder hidden">  Telefoonnummer
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="message">
-                                            <!--[if lt IE 10]>
-            <span lang="nl">Verstuur bericht</span>
-            <span lang="en">Submit message</span>
-                <![endif]-->
-                                        </label>
-                                        <textarea class="form-control" name="message" ng-class="{'error' : errorTextarea}" ng-model="formData.message" cols="30" rows="10" data-placeholder_class=".placeholder" title="Stel uw vraag"></textarea>
-                                        <div class="required">*</div>
-                                        <div class="placeholder hidden">
-                                            Stel uw vraag
-                                        </div>
-                                    </div>
-                                    <div class="QapTcha">
-                                        <div class="TxtShow">
-                                            Verstuur bericht
-                                        </div>
-                                        <div class="TxtHelp">
-                                            Schuif naar rechts om te versturen!
-                                        </div>
-                                    </div>
-                                    <input class="hidden" type="submit" value="Send!" name="submit">
-                                    <div ng-class="{'submissionMessage' : submission}" ng-bind="submissionMessage"></div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
     </main>
 
-
-
-
-
-
-<section id="footer">
-    <div class="footer-section">
-        <p>&copy; 2015 Stichting Rugby Zebra Alle rechten voorbehouden<br/> Vragen? Stuur ons <a href="mailto:info@rugbyzebra.nl">e-mailbericht</a>.
-        </p>
-    </div>
-</section>
+    <section id="footer">
+        <div class="footer-section">
+            <p>&copy; 2015 Stichting Rugby Zebra Alle rechten voorbehouden<br/> Vragen? Stuur ons <a href="mailto:info@rugbyzebra.nl">e-mailbericht</a> of like ons op <a href="https://nl-nl.facebook.com/pages/Rugby-ZeBra/1419160591671039"><img src="img/logo/facebook.png" height="15px" width="15px" alt="">Facebook</a>.
+            </p>
+        </div>
+    </section>
         
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
