site grotendeels klaar, moet nog opgeschoond worden

--- a/Website/Basis Website [SBR Viewer]/index.html
+++ b/Website/Basis Website [SBR Viewer]/index.html
@@ -146,10 +146,69 @@
                         <h2>Nieuws</h2>
                         <div class="divider-grey"></div>
                     </div>
-                    <div class="section-container hcenter">
-                        <div class="vert-center">
-                            Verticale centrering
+                    <div class="col-lg-8 col-lg-offset-2">
+
+                        <div class="row">
+                            <table id="1" class="table active">
+                                <tr>
+                                    <th class="info-green">
+                                            <a onclick="myFunction(1)">
+                                                <img class="plusmin" src="img/min.png" alt="">
+                                            </a>
+                                            voorbeeld nieuwsartikel 1
+                                    </th>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque omnis mollitia doloribus voluptatem blanditiis ad, numquam excepturi sequi eaque molestiae itaque ex quidem dolorum eum? Dignissimos magni corporis nisi aut!</div>
+                                        <div>Officia laboriosam, maiores eum animi, voluptates aliquid sint dolorum ratione totam quis at sequi assumenda deserunt perspiciatis eaque, fugiat rem iusto! Ex voluptatum aspernatur, vitae praesentium blanditiis alias mollitia nostrum!</div>
+                                        <div>Veritatis rerum necessitatibus eveniet, ut iusto dolores blanditiis nihil, voluptatem omnis, soluta modi error saepe quos natus ipsam neque dolorum debitis dolor molestias repudiandae magnam adipisci eos maiores. Esse, ipsa.</div>
+                                        <div>Culpa voluptatibus inventore exercitationem eveniet doloribus quaerat incidunt perspiciatis officia doloremque. Nesciunt, beatae eligendi officiis aspernatur nihil eaque rerum quo veniam reiciendis voluptates autem at fuga repudiandae ratione. Ea, harum.</div>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
+
+                        <div class="row">
+                            <table id="2" class="table inactive">
+                                <tr>
+                                    <th class="info-green">
+                                            <a onclick="myFunction(2)">
+                                                <img class="plusmin" src="img/min.png" alt="">
+                                            </a>
+                                            voorbeeld nieuwsartikel 2
+                                    </th>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque omnis mollitia doloribus voluptatem blanditiis ad, numquam excepturi sequi eaque molestiae itaque ex quidem dolorum eum? Dignissimos magni corporis nisi aut!</div>
+                                        <div>Officia laboriosam, maiores eum animi, voluptates aliquid sint dolorum ratione totam quis at sequi assumenda deserunt perspiciatis eaque, fugiat rem iusto! Ex voluptatum aspernatur, vitae praesentium blanditiis alias mollitia nostrum!</div>
+                                        <div>Veritatis rerum necessitatibus eveniet, ut iusto dolores blanditiis nihil, voluptatem omnis, soluta modi error saepe quos natus ipsam neque dolorum debitis dolor molestias repudiandae magnam adipisci eos maiores. Esse, ipsa.</div>
+                                        <div>Culpa voluptatibus inventore exercitationem eveniet doloribus quaerat incidunt perspiciatis officia doloremque. Nesciunt, beatae eligendi officiis aspernatur nihil eaque rerum quo veniam reiciendis voluptates autem at fuga repudiandae ratione. Ea, harum.</div>                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+
+                        <div class="row">
+                            <table id="3" class="table inactive">
+                                <tr>
+                                    <th class="info-green">
+                                            <a onclick="myFunction(3)">
+                                                <img class="plusmin" src="img/min.png" alt="">
+                                            </a>
+                                            voorbeeld nieuwsartikel 3
+                                    </th>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque omnis mollitia doloribus voluptatem blanditiis ad, numquam excepturi sequi eaque molestiae itaque ex quidem dolorum eum? Dignissimos magni corporis nisi aut!</div>
+                                        <div>Officia laboriosam, maiores eum animi, voluptates aliquid sint dolorum ratione totam quis at sequi assumenda deserunt perspiciatis eaque, fugiat rem iusto! Ex voluptatum aspernatur, vitae praesentium blanditiis alias mollitia nostrum!</div>
+                                        <div>Veritatis rerum necessitatibus eveniet, ut iusto dolores blanditiis nihil, voluptatem omnis, soluta modi error saepe quos natus ipsam neque dolorum debitis dolor molestias repudiandae magnam adipisci eos maiores. Esse, ipsa.</div>
+                                        <div>Culpa voluptatibus inventore exercitationem eveniet doloribus quaerat incidunt perspiciatis officia doloremque. Nesciunt, beatae eligendi officiis aspernatur nihil eaque rerum quo veniam reiciendis voluptates autem at fuga repudiandae ratione. Ea, harum.</div>                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -545,7 +604,7 @@
 
     <section id="footer">
         <div class="footer-section">
-            <p>&copy; 2015 Stichting Rugby Zebra Alle rechten voorbehouden<br/> Vragen? Stuur ons <a href="mailto:info@rugbyzebra.nl">e-mailbericht</a> of like ons op <a href="https://nl-nl.facebook.com/pages/Rugby-ZeBra/1419160591671039"><img src="img/logo/facebook.png" height="15px" width="15px" alt="">Facebook</a>.
+            <p>&copy; 2015 Stichting Rugby Zebra Alle rechten voorbehouden<br/> Vragen? Stuur ons <a href="mailto:info@rugbyzebra.nl">e-mailbericht</a> of like ons op <a href="https://nl-nl.facebook.com/pages/Rugby-ZeBra/1419160591671039"><img src="img/logo/facebook.png" height="15px" width="15px" alt=""> Facebook</a>.
             </p>
         </div>
     </section>
