--- a/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
+++ b/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
@@ -179,11 +179,18 @@
                     </div>
                     <div class="section-container">
                         <div class="col-lg-8 col-lg-offset-2">
+
                             <div class="row">
-                                <table class="table">
+                                <table id="1" class="table active">
                                     <tr>
                                         <th class="info-green">
-                                            Video BN DeStem 27-05-2015 door Jurgen Gommeren<a class="pull-right" href="http://oudenbosch.markland.nl/actueel/old-forest-rugbyteams-laten-onvergetelijke-indruk-achter.html">Bekijk het artikel op de website!</a>
+                                            <a onclick="myFunction(1)">
+                                                <img class="plusmin" src="img/min.png" alt="">
+                                            </a>
+                                            Video Markenland 27-05-2015 door Jurgen Gommeren
+                                            <div class="pull-right">
+                                                <a href="http://oudenbosch.markland.nl/actueel/old-forest-rugbyteams-laten-onvergetelijke-indruk-achter.html">Bekijk het artikel op de website!</a>
+                                            </div>
                                         </th>
                                     </tr>
                                     <tr>
@@ -198,14 +205,20 @@
                             </div>
 
                             <div class="row">
-                                <table class="table">
+                                <table id="2" class="table inactive">
                                     <tr>
                                         <th class="info-green">
-                                            Artikel 28-05-2015 door Sandra Broosus<a class="pull-right" href="http://internetbode.nl/roosendaal/roosendaals-scholen-rugby-toernooi-291054">Bekijk het artikel op de website!</a>
+                                            <a onclick="myFunction(2)">
+                                                <img class="plusmin" src="img/plus.png" alt="">
+                                            </a>
+                                            Artikel 28-05-2015 door Sandra Broosus 
+                                            <div class="pull-right">
+                                                <a href="http://internetbode.nl/roosendaal/roosendaals-scholen-rugby-toernooi-291054">Bekijk het artikel op de website!</a>
+                                            </div>
                                         </th>
                                     </tr>
                                     <tr>
-                                        <td class="text-center">                    
+                                        <td class="text-center inactive">                    
                                             <img src="img/nieuwsartik_SBroosus.jpg" width="100%" alt="">
                                             <p>
                                                 Een korte omschrijving over de desbetreffende pagina.
@@ -214,6 +227,7 @@
                                     </tr>
                                 </table>
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -223,7 +237,7 @@
 
     <section id="footer">
         <div class="footer-section">
-            <p>&copy; 2015 Stichting Rugby Zebra Alle rechten voorbehouden<br/> Vragen? Stuur ons <a href="mailto:info@rugbyzebra.nl">e-mailbericht</a> of like ons op <a href="https://nl-nl.facebook.com/pages/Rugby-ZeBra/1419160591671039"><img src="img/logo/facebook.png" height="15px" width="15px" alt="">Facebook</a>.
+            <p>&copy; 2015 Stichting Rugby Zebra Alle rechten voorbehouden<br/> Vragen? Stuur ons <a href="mailto:info@rugbyzebra.nl">e-mailbericht</a> of like ons op <a href="https://nl-nl.facebook.com/pages/Rugby-ZeBra/1419160591671039"><img src="img/logo/facebook.png" height="15px" width="15px" alt=""> Facebook</a>.
             </p>
         </div>
     </section>
